# Matrizes_C

./: CMakeLists.txt
Primeiro/: calcular_diferenca.c  calcular_diferenca.h  funcoes_mat.c  funcoes_mat.h  lib_matriz.c  main.c  matrizes.h  menu_completo.c  menu_completo.h  respostas_trabalho.c  respostas_trabalho.h  utils.c  utils.h
